force-app/main/default/objects/Project__c/fields/InvoiceTotalSupplierCostsCHF__c.field-meta.xml
<CustomField>
    <fullName>InvoiceTotalSupplierCostsCHF__c</fullName>
    <label>Invoice  - Total Supplier Costs (CHF)</label>
    <summarizedField>Invoice__c.InvoicePOSTotalSupplierCostCHF__c</summarizedField>
    <summaryFilterItems>
        <field>Invoice__c.InvoiceInvalid__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>Invoice__c.ProjectName__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>