force-app/main/default/objects/Project__c/fields/InvoiceTotalTime__c.field-meta.xml
<CustomField>
    <fullName>InvoiceTotalTime__c</fullName>
    <label>Invoice - Total Time</label>
    <summarizedField>Invoice__c.InvoicePOSTotalTime__c</summarizedField>
    <summaryFilterItems>
        <field>Invoice__c.InvoiceInvalid__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>Invoice__c.ProjectName__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>