force-app/main/default/objects/Project__c/fields/IsActiveProjectResponsible__c.field-meta.xml
<CustomField>
    <fullName>IsActiveProjectResponsible__c</fullName>
    <formula>ProjectResponsibleBusiness__r.User__r.IsActive</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IsActive Project Responsible</label>
    <type>Checkbox</type>
</CustomField>