force-app/main/default/objects/Project__c/fields/JunForecast__c.field-meta.xml
<CustomField>
    <fullName>JunForecast__c</fullName>
    <label>Jun Forecast</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>