force-app/main/default/objects/Project__c/fields/LastTimeEntryDate__c.field-meta.xml
<CustomField>
    <fullName>LastTimeEntryDate__c</fullName>
    <label>Last Time Entry Date</label>
    <summarizedField>Package__c.LastTimeEntryDate__c</summarizedField>
    <summaryForeignKey>Package__c.ProjectName__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>