force-app/main/default/objects/Project__c/fields/Licensor__c.field-meta.xml
<CustomField>
    <fullName>Licensor__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Licensor</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Company Account</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Projects (Licensor)</relationshipLabel>
    <relationshipName>ProjectsLicensor</relationshipName>
    <type>Lookup</type>
</CustomField>