force-app/main/default/objects/Project__c/fields/MarForecast__c.field-meta.xml
<CustomField>
    <fullName>MarForecast__c</fullName>
    <label>Mar Forecast</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>