force-app/main/default/objects/Project__c/fields/MarginAmountCHF__c.field-meta.xml
<CustomField>
    <fullName>MarginAmountCHF__c</fullName>
    <formula>InvoiceTotalAmountCHF__c - CostsTotalAmountCHF__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Margin - Amount (CHF)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>