force-app/main/default/objects/Project__c/fields/MarginPercent__c.field-meta.xml
<CustomField>
    <fullName>MarginPercent__c</fullName>
    <formula>IF( InvoiceTotalAmountCHF__c &gt;0, MarginAmountCHF__c /InvoiceTotalAmountCHF__c,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Margin - %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>