force-app/main/default/objects/Project__c/fields/OpportunityQuoteDescription__c.field-meta.xml
<CustomField>
    <fullName>OpportunityQuoteDescription__c</fullName>
    <label>Quote Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>