force-app/main/default/objects/Project__c/fields/OpportunityQuoteNr__c.field-meta.xml
<CustomField>
    <fullName>OpportunityQuoteNr__c</fullName>
    <label>Quote Nr.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>