force-app/main/default/objects/Project__c/fields/PNrPrintPlus__c.field-meta.xml
<CustomField>
    <fullName>PNrPrintPlus__c</fullName>
    <description>14.12.2017, ary: PrintPlus Migrationsfeld</description>
    <label>P-Nr. PrintPlus</label>
    <length>255</length>
    <type>Text</type>
</CustomField>