force-app/main/default/objects/Project__c/fields/ProductionApprovalDate__c.field-meta.xml
<CustomField>
    <fullName>ProductionApprovalDate__c</fullName>
    <label>Production Approval (Date)</label>
    <type>Date</type>
</CustomField>