force-app/main/default/objects/Project__c/fields/ProductionDeadlineDate__c.field-meta.xml
<CustomField>
    <fullName>ProductionDeadlineDate__c</fullName>
    <label>Production Deadline (Date)</label>
    <type>Date</type>
</CustomField>