force-app/main/default/objects/Project__c/fields/ProjectCostCenter__c.field-meta.xml
<CustomField>
    <fullName>ProjectCostCenter__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Internal Contract Partner</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>CostCenter__c.Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>CostCenter__c</referenceTo>
    <relationshipLabel>Projects</relationshipLabel>
    <relationshipName>Projects</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>