force-app/main/default/objects/Project__c/fields/ProjectCurrency__c.field-meta.xml
<CustomField>
    <fullName>ProjectCurrency__c</fullName>
    <label>Project Currency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>GlobalProjectCurrency</valueSetName>
    </valueSet>
</CustomField>