force-app/main/default/objects/Project__c/fields/ProjectInvoiceDescription__c.field-meta.xml
<CustomField>
    <fullName>ProjectInvoiceDescription__c</fullName>
    <description>08.03.2017, ary: Dieses Feld ist redundant und wir nicht mehr benötigt.</description>
    <label>Project Invoice Description_notuse</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>