force-app/main/default/objects/Project__c/fields/ProjectManagementAllowancePercent__c.field-meta.xml
<CustomField>
    <fullName>ProjectManagementAllowancePercent__c</fullName>
    <defaultValue>0.15</defaultValue>
    <label>Project Management Allowance %</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>