force-app/main/default/objects/Project__c/fields/ProjectManagementBillingType__c.field-meta.xml
<CustomField>
    <fullName>ProjectManagementBillingType__c</fullName>
    <label>Project Management Billing Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ProjectManagementSettlement</valueSetName>
    </valueSet>
</CustomField>