force-app/main/default/objects/Project__c/fields/ProjectManagementDescription__c.field-meta.xml
<CustomField>
    <fullName>ProjectManagementDescription__c</fullName>
    <label>Project Management Description</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>