force-app/main/default/objects/Project__c/fields/ProjectNameInternal__c.field-meta.xml
<CustomField>
    <fullName>ProjectNameInternal__c</fullName>
    <formula>ContractPartner__r.AccountNameShort__c &amp;&quot; - &quot; &amp;  Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Name Internal</label>
    <type>Text</type>
</CustomField>