force-app/main/default/objects/Project__c/fields/ProjectNr__c.field-meta.xml
<CustomField>
    <fullName>ProjectNr__c</fullName>
    <displayFormat>P-{000000}</displayFormat>
    <externalId>true</externalId>
    <label>Project Nr.</label>
    <type>AutoNumber</type>
</CustomField>