force-app/main/default/objects/Project__c/fields/ProjectPartner__c.field-meta.xml
<CustomField>
    <fullName>ProjectPartner__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Project Partner</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>notEqual</operation>
            <value>Summary Account</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Projects (Project Partner)</relationshipLabel>
    <relationshipName>ProjectsProjectPartner</relationshipName>
    <type>Lookup</type>
</CustomField>