force-app/main/default/objects/Project__c/fields/ProjectRateHour__c.field-meta.xml
<CustomField>
    <fullName>ProjectRateHour__c</fullName>
    <defaultValue>IF( $RecordType.DeveloperName =&quot;Internal&quot;,200,null)</defaultValue>
    <inlineHelpText>Internal Projects: CHF 200.00</inlineHelpText>
    <label>Project Rate (Hour)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>