force-app/main/default/objects/Project__c/fields/ProjectReference__c.field-meta.xml
<CustomField>
    <fullName>ProjectReference__c</fullName>
    <defaultValue>false</defaultValue>
    <description>30.03.2017, ary: Entscheid Feld ausblenden bis auf Weiteres</description>
    <label>Project Reference</label>
    <type>Checkbox</type>
</CustomField>