force-app/main/default/objects/Project__c/fields/ProjectResponsibilityCompany__c.field-meta.xml
<CustomField>
    <fullName>ProjectResponsibilityCompany__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Project Responsibility (Company)</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Internal Account</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Projects (Project Responsibility (Company))</relationshipLabel>
    <relationshipName>ProjectsResponsibilityCompany</relationshipName>
    <type>Lookup</type>
</CustomField>