force-app/main/default/objects/Project__c/fields/ProjectResponsibleBusiness__c.field-meta.xml
<CustomField>
    <fullName>ProjectResponsibleBusiness__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Project Responsible - (Business)</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.RecordTypeId</field>
            <operation>equals</operation>
            <value>Internal Contact</value>
        </filterItems>
        <filterItems>
            <field>Contact.User__r.IsActive</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Projects (Responsible (Business))</relationshipLabel>
    <relationshipName>ProjectsResponsibleBusiness</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>