force-app/main/default/objects/Project__c/fields/ProjectResponsibleCustomer__c.field-meta.xml
<CustomField>
    <fullName>ProjectResponsibleCustomer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Responsible - (Customer)</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.RecordTypeId</field>
            <operation>equals</operation>
            <value>Company Contact</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Projects (Project Responsible - (Customer))</relationshipLabel>
    <relationshipName>ProjectsResponsibleCustomer</relationshipName>
    <type>Lookup</type>
</CustomField>