force-app/main/default/objects/Project__c/fields/ProjectResponsibleTechnical__c.field-meta.xml
<CustomField>
    <fullName>ProjectResponsibleTechnical__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Project Responsible - (Technical)</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.RecordTypeId</field>
            <operation>equals</operation>
            <value>Internal Contact</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Projects (Project Responsible - (Technical))</relationshipLabel>
    <relationshipName>ProjectsResponsibleTechnical</relationshipName>
    <type>Lookup</type>
</CustomField>