force-app/main/default/objects/Project__c/fields/ProjectStartDate__c.field-meta.xml
<CustomField>
    <fullName>ProjectStartDate__c</fullName>
    <label>Project Start (Date)</label>
    <required>true</required>
    <type>Date</type>
</CustomField>