force-app/main/default/objects/Project__c/fields/ProjectSubType__c.field-meta.xml
<CustomField>
    <fullName>ProjectSubType__c</fullName>
    <label>Project Sub-Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>HelpTime</fullName>
                <label>Help Time</label>
            </value>
            <value>
                <fullName>Absence</fullName>
            </value>
            <value>
                <fullName>InternalProject</fullName>
                <label>Internal Project</label>
            </value>
            <value>
                <fullName>Project</fullName>
            </value>
            <value>
                <fullName>Support</fullName>
            </value>
            <value>
                <fullName>Acquisition</fullName>
            </value>
            <value>
                <fullName>Licence</fullName>
            </value>
            <value>
                <fullName>Trade</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>