force-app/main/default/objects/Project__c/fields/ProjectTemplate__c.field-meta.xml
<CustomField>
    <fullName>ProjectTemplate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Template</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>Project Templates</relationshipLabel>
    <relationshipName>ProjectsTemplate</relationshipName>
    <type>Lookup</type>
</CustomField>