force-app/main/default/objects/Project__c/fields/ReportExpenseMatrix__c.field-meta.xml
<CustomField>
    <fullName>ReportExpenseMatrix__c</fullName>
    <formula>HYPERLINK(&quot;/one/one.app#/sObject/00Ob0000004FiY1EAK/view?fv0=&quot;&amp;  ProjectNr__c , &quot;Open&quot;,&quot;_blank&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Report - Expense (Matrix)</label>
    <type>Text</type>
</CustomField>