force-app/main/default/objects/Project__c/fields/ReportSupplierCostsMatrix__c.field-meta.xml
<CustomField>
    <fullName>ReportSupplierCostsMatrix__c</fullName>
    <formula>HYPERLINK(&quot;/one/one.app#/sObject/00Ob0000004FiYLEA0/view?fv0=&quot;&amp; ProjectNr__c , &quot;Open&quot;,&quot;_blank&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Report - Supplier Costs (Matrix)</label>
    <type>Text</type>
</CustomField>