force-app/main/default/objects/Project__c/fields/ReportTimeByUnit__c.field-meta.xml
<CustomField>
    <fullName>ReportTimeByUnit__c</fullName>
    <formula>HYPERLINK(&quot;/one/one.app#/sObject/00Ob0000004JaIzEAK/view?fv0=&quot;&amp; ProjectNr__c , &quot;Open&quot;,&quot;_blank&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Report - Time (by Unit)</label>
    <type>Text</type>
</CustomField>