force-app/main/default/objects/Project__c/fields/ReportTimeDetail__c.field-meta.xml
<CustomField>
    <fullName>ReportTimeDetail__c</fullName>
    <formula>HYPERLINK(&quot;/one/one.app#/sObject/00Ob0000004Fib5EAC/view?fv0=&quot;&amp; ProjectNr__c , &quot;Open&quot;,&quot;_blank&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Report - Time (Detail)</label>
    <type>Text</type>
</CustomField>