force-app/main/default/objects/Project__c/fields/ReportTimeMatrix__c.field-meta.xml
<CustomField>
    <fullName>ReportTimeMatrix__c</fullName>
    <formula>HYPERLINK(&quot;/one/one.app#/sObject/00Ob0000004FiXhEAK/view?fv0=&quot;&amp;  ProjectNr__c , &quot;Open&quot;,&quot;_blank&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Report - Time (Matrix)</label>
    <type>Text</type>
</CustomField>