force-app/main/default/objects/Project__c/fields/RestrictAccessToOwner__c.field-meta.xml
<CustomField>
    <fullName>RestrictAccessToOwner__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box if you want to restrict access to this project and all related packages &amp; invoices to the Owner.</inlineHelpText>
    <label>Restrict Access to Owner</label>
    <type>Checkbox</type>
</CustomField>