force-app/main/default/objects/Project__c/fields/RestrictAccessToUnit__c.field-meta.xml
<CustomField>
    <fullName>RestrictAccessToUnit__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Check this box if you want to restrict access to this project and all related packages &amp; invoices to your Unit.</inlineHelpText>
    <label>Restrict Access to Unit</label>
    <type>Checkbox</type>
</CustomField>