force-app/main/default/objects/Project__c/fields/RetrieveQuoteProducts__c.field-meta.xml
<CustomField>
    <fullName>RetrieveQuoteProducts__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Retrieve Quote Products</label>
    <type>Checkbox</type>
</CustomField>