force-app/main/default/objects/Project__c/fields/RollForecast__c.field-meta.xml
<CustomField>
    <fullName>RollForecast__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Roll Forecast</label>
    <type>Checkbox</type>
</CustomField>