force-app/main/default/objects/Project__c/fields/ServicesTotalAmountCHF__c.field-meta.xml
<CustomField>
    <fullName>ServicesTotalAmountCHF__c</fullName>
    <formula>ServicesTotalTimeCHF__c + ServicesTotalExpenseCHF__c + ServicesTotalSupplierCostsCHF__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Services - Total Amount (CHF)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>