force-app/main/default/objects/Project__c/fields/ServicesTotalExpense__c.field-meta.xml
<CustomField>
    <fullName>ServicesTotalExpense__c</fullName>
    <label>Services - Total Expense</label>
    <summarizedField>Package__c.ServicesTotalExpense__c</summarizedField>
    <summaryForeignKey>Package__c.ProjectName__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>