force-app/main/default/objects/Project__c/fields/ServicesTotalExpenseCHF__c.field-meta.xml
<CustomField>
    <fullName>ServicesTotalExpenseCHF__c</fullName>
    <label>Services - Total Expense (CHF)</label>
    <summarizedField>Package__c.ServicesTotalExpenseCHF__c</summarizedField>
    <summaryForeignKey>Package__c.ProjectName__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>