force-app/main/default/objects/Project__c/fields/ServicesTotalHours__c.field-meta.xml
<CustomField>
    <fullName>ServicesTotalHours__c</fullName>
    <label>Services - Total Hours</label>
    <summarizedField>Package__c.ServicesTotalHours__c</summarizedField>
    <summaryForeignKey>Package__c.ProjectName__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>