force-app/main/default/objects/Project__c/fields/ServicesTotalSupplierCostsCHF__c.field-meta.xml
<CustomField>
    <fullName>ServicesTotalSupplierCostsCHF__c</fullName>
    <label>Services - Total Supplier Costs (CHF)</label>
    <summarizedField>Package__c.ServicesTotalSupplierCostsCHF__c</summarizedField>
    <summaryFilterItems>
        <field>Package__c.RecordTypeId</field>
        <operation>notEqual</operation>
        <value>License (Provision)</value>
    </summaryFilterItems>
    <summaryForeignKey>Package__c.ProjectName__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>