force-app/main/default/objects/Project__c/fields/ServicesTotalTime__c.field-meta.xml
<CustomField>
    <fullName>ServicesTotalTime__c</fullName>
    <label>Services - Total Time</label>
    <summarizedField>Package__c.ServicesTotalTime__c</summarizedField>
    <summaryForeignKey>Package__c.ProjectName__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>