force-app/main/default/objects/Project__c/fields/ServiceTotalAmountCHFBP__c.field-meta.xml
<CustomField>
    <fullName>ServiceTotalAmountCHFBP__c</fullName>
    <formula>ServiceTotalTimeCHFBP__c + ServiceTotalExpenseCHFBP__c + ServiceTotalSupplierCostBP__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service - Total Amount (CHF) - BP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>