force-app/main/default/objects/Project__c/fields/ServiceTotalExpenseCHFBP__c.field-meta.xml
<CustomField>
    <fullName>ServiceTotalExpenseCHFBP__c</fullName>
    <label>Service - Total Expense (CHF) - BP</label>
    <summarizedField>Package__c.ServiceTotalExpenseCHFBP__c</summarizedField>
    <summaryForeignKey>Package__c.ProjectName__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>