force-app/main/default/objects/Project__c/fields/ServiceTotalSupplierCostBP__c.field-meta.xml
<CustomField>
    <fullName>ServiceTotalSupplierCostBP__c</fullName>
    <label>Service - Total Supplier Cost (CHF) - BP</label>
    <summarizedField>Package__c.ServiceTotalSupplierCostCHFBP__c</summarizedField>
    <summaryForeignKey>Package__c.ProjectName__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>