force-app/main/default/objects/Project__c/fields/ServiceTotalTimeCHFBP__c.field-meta.xml
<CustomField>
    <fullName>ServiceTotalTimeCHFBP__c</fullName>
    <label>Service - Total Time (CHF) - BP</label>
    <summarizedField>Package__c.ServiceTotalTimeCHFBP__c</summarizedField>
    <summaryForeignKey>Package__c.ProjectName__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>