force-app/main/default/objects/Project__c/fields/StaffNr__c.field-meta.xml
<CustomField>
    <fullName>StaffNr__c</fullName>
    <formula>ProjectResponsibleBusiness__r.StaffNr__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Staff Nr.</label>
    <type>Text</type>
</CustomField>