force-app/main/default/objects/Project__c/fields/SupplierCostsForecast__c.field-meta.xml
<CustomField>
    <fullName>SupplierCostsForecast__c</fullName>
    <label>Supplier Costs Forecast</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>