force-app/main/default/objects/Project__c/fields/TotalForecast__c.field-meta.xml
<CustomField>
    <fullName>TotalForecast__c</fullName>
    <formula>JanForecast__c+FebForecast__c+MarForecast__c+AprForecast__c+MayForecast__c+JunForecast__c+JulForecast__c+AugForecast__c+SepForecast__c+OctForecast__c+NovForecast__c+DecForecast__c+x12Forecast__c+
ILVForecast__c+SupplierCostsForecast__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Forecast</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>