force-app/main/default/objects/Project__c/fields/ValCountAbacusInbox__c.field-meta.xml
<CustomField>
    <fullName>ValCountAbacusInbox__c</fullName>
    <label>ValCountAbacusInbox</label>
    <summaryFilterItems>
        <field>Package__c.AbacusInbox__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Package__c.ProjectName__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>