force-app/main/default/objects/Project__c/fields/ValCountHasILVDraft__c.field-meta.xml
<CustomField>
    <fullName>ValCountHasILVDraft__c</fullName>
    <label>ValCountHasILVDraft</label>
    <summaryFilterItems>
        <field>Invoice__c.InvoiceStatus__c</field>
        <operation>equals</operation>
        <value>Draft</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Invoice__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>ILV</value>
    </summaryFilterItems>
    <summaryForeignKey>Invoice__c.ProjectName__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>