force-app/main/default/objects/Project__c/fields/ValCountHasInvoice__c.field-meta.xml
<CustomField>
    <fullName>ValCountHasInvoice__c</fullName>
    <label>ValCountHasInvoice</label>
    <summaryForeignKey>Invoice__c.ProjectName__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>