force-app/main/default/objects/Project__c/fields/ValCountHasInvoiceCheckbox__c.field-meta.xml
<CustomField>
    <fullName>ValCountHasInvoiceCheckbox__c</fullName>
    <formula>IF( ValCountHasInvoice__c =0,false,true)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ValCountHasInvoiceCheckbox</label>
    <type>Checkbox</type>
</CustomField>