force-app/main/default/objects/Project__c/fields/ValCountHasPackage__c.field-meta.xml
<CustomField>
    <fullName>ValCountHasPackage__c</fullName>
    <label>ValCountHasPackage</label>
    <summaryForeignKey>Package__c.ProjectName__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>