force-app/main/default/objects/Project__c/fields/ValCountHasPackageCheckbox__c.field-meta.xml
<CustomField>
    <fullName>ValCountHasPackageCheckbox__c</fullName>
    <formula>IF( ValCountHasPackage__c =0,false,true)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ValCountHasPackageCheckbox</label>
    <type>Checkbox</type>
</CustomField>